# shutdown-effect

./: .gitignore  NOTES.md  README.md  discovery.py  graceful-power  manifest.yaml  pyproject.toml  repo_meta.json  shutdown-effect.py  trait_published.yaml
src/: discovery.py
src/animations/fade/: animate.py
